k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: furnisight-ingress
  namespace: furnisight-apps
spec:
  ingressClassName: traefik
  rules:
    - host: api.furnisight.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: furnisight-frontend-ingress
  namespace: furnisight-frontend
spec:
  ingressClassName: traefik
  rules:
    - host: furnisight.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: furnisight-frontend
                port:
                  number: 80
